doc/v2.0/_sources/reference/generated/ak.corr.rst.txt
ak.corr
-------

.. py:module: ak.corr

Defined in `awkward.operations.ak_corr <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_corr.py>`__ on `line 12 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_corr.py#L12>`__.

.. py:function:: ak.corr(x, y, weight=None, axis=None, *, keepdims=False, mask_identity=False, flatten_records=unset)


    :param x: One coordinate to use in the correlation (anything :py:obj:`ak.to_layout` recognizes).
    :param y: The other coordinate to use in the correlation (anything :py:obj:`ak.to_layout` recognizes).
    :param weight: Data that can be broadcasted to ``x`` and ``y`` to give each point
               a weight. Weighting points equally is the same as no weights;
               weighting some points higher increases the significance of those
               points. Weights can be zero or negative.
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this function decreases the number of
                 dimensions by 1; if True, the output values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, the application of this function on
                      empty lists results in None (an option type); otherwise, the
                      calculation is followed through with the reducers' identities,
                      usually resulting in floating-point ``nan``.
    :type mask_identity: bool

Computes the correlation of ``x`` and ``y`` (many types supported, including
all Awkward Arrays and Records, must be broadcastable to each other).
The grouping is performed the same way as for reducers, though this
operation is not a reducer and has no identity.

This function has no NumPy equivalent.

Passing all arguments to the reducers, the correlation is calculated as

.. code-block:: python


    ak.sum((x - ak.mean(x))*(y - ak.mean(y))*weight)
        / np.sqrt(ak.sum((x - ak.mean(x))**2))
        / np.sqrt(ak.sum((y - ak.mean(y))**2))

See :py:obj:`ak.sum` for a complete description of handling nested lists and
missing values (None) in reducers, and :py:obj:`ak.mean` for an example with another
non-reducer.

